# cobol-modernizer

./: .dockerignore  .env.example  .gitignore  ACCOUNTING_SYSTEM.COB  BUYROUTINE.COB  DOCKER.md  Dockerfile  Makefile  README.md  README_SISTEMA_MULTIAGENTE.md  cobol_modernizer.py  cobol_modernizer2.py  docker-compose.yml  pyproject.toml
output/: .dockerignore  .env  .env.example  DATABASE.txt  Dockerfile  README.md  config.py  etl_migration.py  main.py  products.txt  requirements.txt
output/cli/: __init__.py  admin_menu.py  buyer_menu.py  employee_menu.py  main_menu.py  order_menu.py  product_menu.py  profit_menu.py  ui_helpers.py
output/database/: __init__.py  connection.py  init_db.py
output/models/: activity_log.py  admin.py  employee.py  order.py  order_item.py  product.py  profit_record.py  salary_record.py
output/repositories/: activity_log_repository.py  admin_repository.py  base_repository.py  employee_repository.py  order_item_repository.py  order_repository.py  product_repository.py  profit_repository.py  salary_repository.py
output/services/: __init__.py  activity_service.py  auth_service.py  employee_service.py  order_service.py  product_service.py  profit_service.py
output/tests/: test_supermarket.py
outputs/: architecture_095500.md  codegen_100801.md  discover_095126.md  migration_095913.md
prompts/: 01_orchestrator.md  02_discovery.md  03_architecture.md  04_migration.md  05_codegen.md  05b_filelist.md  06_reviewer.md
